src/objects/Product_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Currency__c</fullName>
        <label>Cost Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Percent__c</fullName>
        <label>Cost Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Per Calendar Month</fullName>
                </value>
                <value>
                    <fullName>ATM Fee in other currencies</fullName>
                </value>
                <value>
                    <fullName>Card Replacement Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>IF(OR(NOT(ISBLANK(Cost_Currency__c)),NOT(ISBLANK(Cost_Percent__c))),IF(NOT(ISBLANK(Cost_Currency__c)),TEXT(CurrencyIsoCode)+&apos; &apos;+TEXT(Cost_Currency__c),TEXT(Cost_Percent__c*100)+&apos;%&apos;),&apos;N/A&apos;)</formula>
        <label>Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <label>Product Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Type__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Product Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>